@@ -1,3 +1,7 @@
+2002-07-14  Tom Tromey  <tromey@redhat.com>
+
+	* defs (ACLOCAL): Also search build directory for m4 files.
+
 1999-01-14  Tom Tromey  <tromey@cygnus.com>
 
 	* confh3.test: New file.
